--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/png" href="src/assets/powerups/powerup-axe.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Titeenipeli 2025</title>
+        <title>Clash of the Titens</title>
     </head>
     <body>
         <div id="root"></div>
